# strobemers

./: README.md  StrobeMap  StrobeMap_Maier  StrobeMatch  analysis1.py  analysis1and2.py  analysis3.py  analysis4.py  plot_uniqueness.py  runtime_analysis.py  strobe_match.py  strobe_seed_kmers.py
data/: ONT_sirv_cDNA_seqs.fasta  method_overview.key
evaluation/: RMQT.py  genome_mapping_metrics.py  genome_mappings_eval.sh  matching_analysis.py  plot_uniqueness.py  plots.py  print_hit_statistics.py  python_runtime_analysis.py  reads_hit_statistics.py  reads_to_genome_plots.py  runtime_cpp.sh  sample_reads.py  select_longest_reads.py  sirv_match_lengths.sh  sirv_read_analysis.sh  sirv_reads_to_ref.sh
modules/: help_functions.py  indexing.py  indexing2.py  indexing_Maier.py  indexing_OLD.py
randstrobe_implementations/: README.md
randstrobe_implementations/evaluation/: evaluate_sampling.py  run_analysis.sh
randstrobe_implementations/figures/: clumpings.key
randstrobe_implementations/src/: CMakeLists.txt  index.cpp  index.hpp  main.cpp  robin_hood.h
strobemers_cpp/: CMakeLists.txt  Config.cmake.in  index.cpp  index.h  index.hpp  main.cpp  robin_hood.h
strobemers_cpp/binaries/Linux/: StrobeMap-0.0.2
strobemers_cpp/binaries/MacOS/: StrobeMap  StrobeMap-0.0.2
